# terminal-renderer

./: .gitignore  Cargo.toml  README.md  power_lines.obj:Zone.Identifier  shell.nix  trumpet.obj:Zone.Identifier
benches/: my_benchmark.rs
objects/: airboat.obj:Zone.Identifier  al.obj:Zone.Identifier
src/: lib.rs  main.rs
src/loader/: mod.rs
src/math/: mod.rs
src/renderer/: mod.rs
