[package]
name = "terminal-renderer"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
crossterm = "0.28.1"
rayon = "1.10.0"
glam = "0.29.2"
clap = { version = "4.5.21", features = ["derive"] }

[profile.release]
debug = true
